--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -42,6 +42,11 @@ jobs:
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }} 
         run: python src/etl_spark.py
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests pyspark pandas
+
       # E. EJECUTAR EL ETL SPARk
       - name: Run PySpark ETL
         run: python src/etl_spark.py
